test/compile-fail/resolution/conflicts/impl/top.rhdl
struct a {}
impl a {
    fn b () {}
    const b: c = false;
}
enum c {}
